# ScreenTimeAnalyticalTool

./: .qmlls.ini  AppStyle.qml  CMakeLists.txt  Main.qml  Style.qml  build_log.txt  databasemanager.cpp  databasemanager.h  main.cpp  qmldir  usagetracker.cpp  usagetracker.h
src/: main.cpp
src/core/: databasemanager.cpp  databasemanager.h  usagetracker.h
src/ui/: Main.qml
tests/: test_idle.cpp
